# whisper.cpp

examples/: CMakeLists.txt
examples/gst-stream/: CMakeLists.txt  README.md  whisper_sink.cpp  whisper_sink.h
